--- a/Aqua-Link/platformio.ini
+++ b/Aqua-Link/platformio.ini
@@ -13,6 +13,7 @@ platform = espressif32@6.5.0
 board = esp32dev
 framework = arduino
 monitor_speed = 115200
+extra_scripts = extra_script.py
 
 ;upload_protocol = espota
 ;upload_port = 192.168.1.103  ; <-- IP du module ESP32 sur ton réseau
