--- a/RootCtrl/platformio.ini
+++ b/RootCtrl/platformio.ini
@@ -8,18 +8,16 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:Aqua-Link]
+[env:RootCtrl]
 platform = espressif32@6.5.0
 board = esp32dev
 framework = arduino
 monitor_speed = 115200
 extra_scripts = extra_script.py
-
-
-lib_deps =
-  knolleary/PubSubClient            ; MQTT
-  adafruit/DHT sensor library       ; DHT22
-  milesburton/DallasTemperature     ; DS18B20
-  paulstoffregen/OneWire            ; Bus 1-Wire pour DS18B20
-  bblanchon/ArduinoJson             ; JSON pour API REST
-  tzapu/WiFiManager                 ; Connexion WiFi via portail captif
+lib_deps = 
+	knolleary/PubSubClient				; MQTT
+	adafruit/DHT sensor library			; DHT22
+	milesburton/DallasTemperature		; DS18B20
+	paulstoffregen/OneWire				; Bus 1-Wire pour DS18B20
+	bblanchon/ArduinoJson				; JSON pour API REST
+	tzapu/WiFiManager					; Connexion WiFi via portail captif
