Mqtt no more topic selection but device auto discovery in home assistant

--- a/RootCtrl/platformio.ini
+++ b/RootCtrl/platformio.ini
@@ -21,3 +21,4 @@ lib_deps =
 	paulstoffregen/OneWire				; Bus 1-Wire pour DS18B20
 	bblanchon/ArduinoJson				; JSON pour API REST
 	tzapu/WiFiManager					; Connexion WiFi via portail captif
+build_flags = -DPUBSUBCLIENT_MAX_PACKET_SIZE=2048
